--- a/package.json
+++ b/package.json
@@ -34,13 +34,17 @@
     "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.16.7",
     "@vitejs/plugin-react": "^1.2.0",
     "electron-is-dev": "^2.0.0",
     "i18next": "^23.11.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^14.1.2",
+    "react-router-dom": "^6.26.1",
     "vite": "^2.8.6",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5"
