--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^5.16.7",
     "@vitejs/plugin-react": "^1.2.0",
+    "axios": "^1.7.7",
     "electron-is-dev": "^2.0.0",
     "i18next": "^23.11.5",
     "react": "^17.0.2",
