--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^17.0.2",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.26.1",
+    "react-use-websocket": "^4.9.0",
     "vite": "^2.8.6",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5"
