--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "clean": "rimraf dist main src/out",
     "type-check": "tsc",
     "lint": "eslint . --ext js,jsx,ts,tsx",
-    "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix"
+    "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
+    "start": "concurrently --kill-others \"npm run dev\" \"npm run start-backend\"",
+    "start-frontend": "react-scripts start",
+    "start-backend": "cd pyback && python app.py"
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
@@ -50,7 +53,7 @@
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.26.1",
     "react-use-websocket": "^4.9.0",
-    "vite": "^2.8.6",
+    "vite": "^5.4.10",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
